; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_cache_invalidate.c_cache_invalidate_xact_end.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_cache_invalidate.c_cache_invalidate_xact_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @cache_invalidate_xact_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cache_invalidate_xact_end(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %8 [
    i32 129, label %6
    i32 128, label %6
  ]

6:                                                ; preds = %2, %2
  %7 = call i32 (...) @cache_invalidate_all()
  br label %8

8:                                                ; preds = %2, %6
  br label %9

9:                                                ; preds = %8
  ret void
}

declare dso_local i32 @cache_invalidate_all(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
